tests/type-check/good/where.arr
fun foo(x :: Number):
  x + 1
where:
  foo(1) is 2
  foo(3) is 4
end
