tests/type-check/bad/function-number-not-tuple.arr
fun f(t :: Number):
   t
end

f({true; 3})
